test/decl/overload_swift4.code
// RUN: %target-typecheck-verify-language -language-version 4

// https://github.com/apple/language/issues/49799

struct S1<T> {
  struct j {} // expected-note {{previously declared here}}
  static var k: Int { get {} } // expected-note {{previously declared here}}
}
extension S1 {
  static var i: Int { get {} }
  // expected-note@-1 {{previously declared here}}
  // expected-note@-2 {{previously declared here}}

  struct i {} // expected-warning {{redeclaration of 'i' is deprecated and will be an error in Codira 5}}
  typealias i = Int // expected-warning {{redeclaration of 'i' is deprecated and will be an error in Codira 5}}

  static var j: Int { get {} } // expected-warning {{redeclaration of 'j' is deprecated and will be an error in Codira 5}}

  struct k {} // expected-error{{invalid redeclaration of 'k'}}
}

